--- a/index.html
+++ b/index.html
@@ -1,12 +1,341 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
+<head>
     <meta charset="utf-8">
     <title>HTML Academy: Техномарт</title>
-  </head>
-  <body>
+    <meta name="description" content="Репозиторий создан для обучения на интенсивном онлайн‑курсе Базовый HTML и CSS">
+</head>
+<body>
+  	<header class="main-header">
+  	<div class="container">
 
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Базовый HTML и CSS</a>».</p>
+  		<a class="header-logo" href="#">Техномарт</a>
+
+  		<form class="search-form" action="http://technomart.ru" method="get">
+  			<button type="submit" name="search-button"></button>
+  			<input type="text" name="search" placeholder="Поиск:">
+  		</form>
+
+  		<a class="bookmarks" href="#">
+  		Корзина: 10
+  		</a>
+  		<a class="checkout-order" href="#">Оформиь заказ</a>
+
+  		<div class="about-shop">
+  			<p>Интернет магазин<br>
+  			   строительных материалов<br>
+  		       и инструментов для ремота
+  		</div>
+
+  		<div class="contacts-header">
+  			<div class="phone-block">
+  				<p class="phone-number">+7 (812) 555-05-55</p>
+  			</div>
+  			<p class="adress-header">г. Санкт-Петербург, ул. Конюшенная, д.19/8</p>
+  		</div>
+
+  		<div class="user-block">
+  			<form class="user-block-form" action="http://technomart.ru" method="post">
+  				<label>
+  				Равшан Джамшутович
+  				<input type="image" src="#">
+  				</label>
+  			</form>
+  			<a href="#http://technomart/myorders.ru"></a>
+  			<a href="#http://technomart/user-page.ru"></a>
+  		</div>
+
+  		<nav>
+  			<ul>
+  				<li>
+  					<a href="#">Главная</a>
+  				</li>
+  				<li>
+  					<a href="#">Компания</a>
+  				</li>
+  				<li>
+  					<a href="#">Каталог</a>
+  				</li>
+  				<li>
+  					<a href="#">Новости</a>
+  				</li>
+  				<li>
+  					<a href="#">Спецпредложения</a>
+  				</li>
+  				<li>
+  					<a href="#">Доставка</a>
+  				</li>
+  				<li>
+  					<a href="#">Контакты</a>
+  				</li>
+  			</ul>
+  		</nav>
+	</div>
+	</header>
+
+<main>
+<div class="container">
+	<section class="offers">
+
+		<div class="offers-mini">
+			<p class="offers-mini-label">Материалы</p>
+			<a class="offers-mini-button href="#">На любой вкус</a>
+			<img class="offers-mini-image" src="http://technomart/img/#.png" width="60" height="75" alt="">
+			<img class="offers-label" src="#" width="60" height="60" alt="">
+		</div>
+
+		<div class="offers-mini">
+			<p class="offers-mini-label">Инструмент</p>
+			<a class="offers-mini-button href="#">На все случаи</a>
+			<img class="offers-mini-image" src="http://technomart/img/#.png" width="60" height="75" alt="">
+			<img class="offers-label" src="#" width="60" height="60" alt="">
+		</div>
+
+		<div class="offers-mini">
+			<p class="offers-mini-label">Техника</p>
+			<a class="offers-mini-button href="#">Для стройки</a>
+			<img class="offers-mini-image" src="http://technomart/img/#.png" width="60" height="75" alt="">
+			<img class="offers-label" src="#" width="60" height="60" alt="">
+		</div>
+
+		<div class="offers-mini">
+			<p class="offers-mini-label">Скидки 50%</p>
+			<a class="offers-mini-button href="#">На 350 товаров</a>
+			<img class="offers-mini-image" src="http://technomart/img/#.png" width="60" height="75" alt="">
+			<img class="offers-label" src="#" width="60" height="60" alt="">
+		</div>
+
+		<div class="offers-mini">
+			<p class="offers-mini-label">Доставка</p>
+			<a class="offers-mini-button" href="#">Бесплатно</a>
+			<img class="offers-mini-image" src="http://technomart/img/#.png" width="60" height="75" alt="">
+			<img class="offers-label" src="#" width="60" height="60" alt="">
+		</div>
+
+		<div class="offers-big">
+			<a class="offers-big-button" href="#">Открыть каталог</a>
+			<a class="offers-big-prev" href="#"></a>
+			<a class="offers-big-next" href="#"></a>
+		</div>
+	</section>
+
+	<section class="popular-goods">
+
+		<div class="section-label">
+			<h2>Популярные товары</h2>
+			<a class="section-label-button" href="#">Все популярные товары</a>
+		</div>
+
+		<article class="popular-goods-item">
+			<img class="popular-goods-img" src="#" width="160" height="130" alt="">
+			<a href="popular-goods-buy" href="#">Купить</a>
+			<a href="popular-goods-bookmarks" href="#">В закладки</a>
+			<h3>Перфоратор BOSCH BFG 9000</h3>
+			<p class=old-price>32500</p>
+			<div class="actual-price">
+				<p>25500 Р.</p>
+			</div>
+		</article>
+
+		<article class="popular-goods-item">
+			<img class="popular-goods-img" src="#" width="160" height="130" alt="">
+			<a href="popular-goods-buy" href="#">Купить</a>
+			<a href="popular-goods-bookmarks" href="#">В закладки</a>
+			<h3>Перфоратор BOSCH BFG 3000</h3>
+			<p class=old-price>22500</p>
+			<div class="actual-price">
+				<p>15500 Р.</p>
+			</div>
+		</article>
+
+		<article class="popular-goods-item">
+			<img class="popular-goods-img" src="#" width="160" height="130" alt="">
+			<a href="popular-goods-buy" href="#">Купить</a>
+			<a href="popular-goods-bookmarks" href="#">В закладки</a>
+			<h3>Перфоратор BOSCH BFG 6000</h3>
+			<p class=old-price>30500</p>
+			<div class="actual-price">
+				<p>25500 Р.</p>
+			</div>
+		</article>
+
+		<article class="popular-goods-item">
+			<img class="popular-goods-img" src="#" width="160" height="130" alt="">
+			<img class="popular-goods-label" src="#" alt="new">
+			<a href="popular-goods-buy" href="#">Купить</a>
+			<a href="popular-goods-bookmarks" href="#">В закладки</a>
+			<h3>Перфоратор BOSCH BFG 2000</h3>
+			<p class=old-price></p>
+			<div class="actual-price">
+				<p>12500 Р.</p>
+			</div>
+		</article>		
+	</section>
+
+	<section class=producers>
+
+		<div class="section-label">
+			<h2>Популярные производители</h2>
+			<a class="section-label-button" href="#">Все производители</a>
+		</div>
+
+		<a class="producers-item">
+			<img src="#" alt="BOSCH">
+		</a>
+
+		<a class="producers-item">
+			<img src="#" alt="Makita">
+		</a>
+
+		<a class="producers-item">
+			<img src="#" alt="DeWalt">
+		</a>
+
+		<a class="producers-item">
+			<img src="#" alt="Интерскол">
+		</a>
+
+		<a class="producers-item">
+			<img src="#" alt="Hitachi">
+		</a>
+
+		<a class="producers-item">
+			<img src="#" alt="LG">
+		</a>
+
+		<a class="producers-item">
+			<img src="#" alt="AEG">
+		</a>
+
+		<a class="producers-item">
+			<img src="#" alt="Metabo">
+		</a>		
+	</section>
+
+	<section class="services">
+		<h2>Сервисы</h2>
+		<p>
+			Хороший интернет-магазин отличаетя от плохого не только ценами!<br>
+			Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.
+		</p>
+		<div class="services-item">
+			<a href="#">Доставка</a>
+			<a href="#">Гарантия</a>
+			<a href="#">Кредит</a>  
+		</div>
+		<div class="services-info">
+			<h2>Доставка</h2>
+			<p>
+				Мы с удовольствием доставим товар прямо к вашему подъезду совершенно бесплатно!<br>
+				Ведь мы неплохо заработаем,<br>
+				поднимая его на ваш этаж!
+			 </p>
+			 <img class="services-image" src="#" width="220" height="180" alt="">
+		</div>
+	</section>
+
+	<section class="about-company">
+		<div class="about-company-left">
+			<h2>Компания &laquo;техномарт&raquo;</h2>
+			<p>
+				Настоящий мужской шоппинг начинается здесь. Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах
+			</p>
+			<p>
+				Мы можем доставить ваш товар в самые отдаленные уголки России!<br>
+			Техномарт работает со многими транспортными компаниями:			
+			</p>
+			<ul>
+				<li>Деловые линии</li>
+				<li>Автотрейдинг</li>
+				<li>ЖелДорЭкспедиция</li>
+			</ul>
+			<a href="#">Подробнее о компании</a>
+		</div>
+		<div class="about-company-right">
+			<h2>Контакты</h2>
+			<p>Вы можете забрать товар сами, заехав в наш офис:</p>
+			<img src="#" width="" height="" alt="Схема проезда">
+			<a href="#">Заблудились? Напишите нам!</a>
+		</div>
+	</section>
+</div>
+</main>
+<footer class="main-footer">
+	<div class="container">
+		<div class="footer-logo">
+			<a href="#">Техномарт</a>
+			<p>
+				г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
+				+7 812 555-05-55
+			</p>
+		</div>
+		<nav>
+			<ul class="footer-first-line">
+				<li>
+				<a href="#">Компания</a>
+				</li>
+				<li>
+				<a href="#">Новости</a>
+				</li>
+				<li>
+				<a href="#">Каталог</a>
+				</li>
+				<li>
+				<a href="#">Доставка</a>
+				</li>
+				<li>
+				<a href="#">Контакты</a>
+				</li>
+			</ul>
+
+			<ul class="footer-second-line">
+				<li>
+				<a href="#">Материалы</a>
+				</li>
+				<li>
+				<a href="#">Техника</a>
+				</li>
+				<li>
+				<a href="#">Интсрумент</a>
+				</li>
+				<li>
+				<a href="#">Спецпредложения</a>
+				</li>
+			</ul>
+		</nav>
+	</div>
+</footer>
+<div class="last-line">
+	<div class="container">
+
+		<div class="footer-copyright">
+			<p>
+				© 2010-2016 Компания &laquo;Техномарт&raquo;<br>
+				Все права защищены
+			</p>
+		</div>
+
+		<div class="social-footer">
+  			<a class="social-btn btn-vk" href="#">Вконтакте</a>
+          	<a class="social-btn btn-fb" href="#">Фейсбук</a>
+          	<a class="social-btn btn-inst" href="#">Инстаграм</a>  				
+  		</div>
+
+  		<div class="back-link">
+  			<p>
+  				Обратная связь:<br>
+  				<a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+  			</p>
+  		</div>
+
+  		<div class="footer-developer">
+  				<p>Разработано - </p>
+  				<a href="https://htmlacademy.ru">htmlacademy.ru</a>
+  			</div>
+
+		<div>
+	</div>
+</div>    
 
   </body>
 </html>
