--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   			<form class="user-block-form" action="http://technomart.ru" method="post">
   				<label>
   				Равшан Джамшутович
-  				<input type="image" src="#">
+  				<input type="image" src="#" alt="Выйти из профиля" name="exit">
   				</label>
   			</form>
   			<a href="#http://technomart/myorders.ru"></a>
@@ -78,35 +78,35 @@
 	<section class="offers">
 
 		<div class="offers-mini">
-			<p class="offers-mini-label">Материалы</p>
-			<a class="offers-mini-button href="#">На любой вкус</a>
+			<h2 class="offers-header">Материалы</h2>
+			<a class="offers-mini-button" href="#">На любой вкус</a>
 			<img class="offers-mini-image" src="http://technomart/img/#.png" width="60" height="75" alt="">
 			<img class="offers-label" src="#" width="60" height="60" alt="">
 		</div>
 
 		<div class="offers-mini">
-			<p class="offers-mini-label">Инструмент</p>
-			<a class="offers-mini-button href="#">На все случаи</a>
+			<h2 class="offers-header">Инструмент</h2>
+			<a class="offers-mini-button" href="#">На все случаи</a>
 			<img class="offers-mini-image" src="http://technomart/img/#.png" width="60" height="75" alt="">
 			<img class="offers-label" src="#" width="60" height="60" alt="">
 		</div>
 
 		<div class="offers-mini">
-			<p class="offers-mini-label">Техника</p>
-			<a class="offers-mini-button href="#">Для стройки</a>
+			<h2 class="offers-header">Техника</h2>
+			<a class="offers-mini-button" href="#">Для стройки</a>
 			<img class="offers-mini-image" src="http://technomart/img/#.png" width="60" height="75" alt="">
 			<img class="offers-label" src="#" width="60" height="60" alt="">
 		</div>
 
 		<div class="offers-mini">
-			<p class="offers-mini-label">Скидки 50%</p>
-			<a class="offers-mini-button href="#">На 350 товаров</a>
+			<h2 class="offers-header">Скидки 50%</h2>
+			<a class="offers-mini-button" href="#">На 350 товаров</a>
 			<img class="offers-mini-image" src="http://technomart/img/#.png" width="60" height="75" alt="">
 			<img class="offers-label" src="#" width="60" height="60" alt="">
 		</div>
 
 		<div class="offers-mini">
-			<p class="offers-mini-label">Доставка</p>
+			<h2 class="offers-header">Доставка</h2>
 			<a class="offers-mini-button" href="#">Бесплатно</a>
 			<img class="offers-mini-image" src="http://technomart/img/#.png" width="60" height="75" alt="">
 			<img class="offers-label" src="#" width="60" height="60" alt="">
@@ -128,8 +128,8 @@
 
 		<article class="popular-goods-item">
 			<img class="popular-goods-img" src="#" width="160" height="130" alt="">
-			<a href="popular-goods-buy" href="#">Купить</a>
-			<a href="popular-goods-bookmarks" href="#">В закладки</a>
+			<a class="popular-goods-buy" href="#">Купить</a>
+			<a class="popular-goods-bookmarks" href="#">В закладки</a>
 			<h3>Перфоратор BOSCH BFG 9000</h3>
 			<p class=old-price>32500</p>
 			<div class="actual-price">
@@ -139,8 +139,8 @@
 
 		<article class="popular-goods-item">
 			<img class="popular-goods-img" src="#" width="160" height="130" alt="">
-			<a href="popular-goods-buy" href="#">Купить</a>
-			<a href="popular-goods-bookmarks" href="#">В закладки</a>
+			<a class="popular-goods-buy" href="#">Купить</a>
+			<a class="popular-goods-bookmarks" href="#">В закладки</a>
 			<h3>Перфоратор BOSCH BFG 3000</h3>
 			<p class=old-price>22500</p>
 			<div class="actual-price">
@@ -150,8 +150,8 @@
 
 		<article class="popular-goods-item">
 			<img class="popular-goods-img" src="#" width="160" height="130" alt="">
-			<a href="popular-goods-buy" href="#">Купить</a>
-			<a href="popular-goods-bookmarks" href="#">В закладки</a>
+			<a class="popular-goods-buy" href="#">Купить</a>
+			<a class="popular-goods-bookmarks" href="#">В закладки</a>
 			<h3>Перфоратор BOSCH BFG 6000</h3>
 			<p class=old-price>30500</p>
 			<div class="actual-price">
@@ -162,8 +162,8 @@
 		<article class="popular-goods-item">
 			<img class="popular-goods-img" src="#" width="160" height="130" alt="">
 			<img class="popular-goods-label" src="#" alt="new">
-			<a href="popular-goods-buy" href="#">Купить</a>
-			<a href="popular-goods-bookmarks" href="#">В закладки</a>
+			<a class="popular-goods-buy" href="#">Купить</a>
+			<a class="popular-goods-bookmarks" href="#">В закладки</a>
 			<h3>Перфоратор BOSCH BFG 2000</h3>
 			<p class=old-price></p>
 			<div class="actual-price">
@@ -254,7 +254,7 @@
 		<div class="about-company-right">
 			<h2>Контакты</h2>
 			<p>Вы можете забрать товар сами, заехав в наш офис:</p>
-			<img src="#" width="" height="" alt="Схема проезда">
+			<img src="#" width="300" height="160" alt="Схема проезда">
 			<a href="#">Заблудились? Напишите нам!</a>
 		</div>
 	</section>
@@ -329,13 +329,13 @@
   		</div>
 
   		<div class="footer-developer">
-  				<p>Разработано - </p>
-  				<a href="https://htmlacademy.ru">htmlacademy.ru</a>
-  			</div>
+  			<p>Разработано - </p>
+  			<a href="https://htmlacademy.ru">htmlacademy.ru</a>
+  		</div>
 
-		<div>
 	</div>
-</div>    
+</div>  
 
-  </body>
+
+</body>
 </html>
