--- a/catalog.html
+++ b/catalog.html
@@ -1,83 +1,99 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
+<head>
     <meta charset="utf-8">
     <title>HTML Academy: Техномарт</title>
     <meta name="description" content="Репозиторий создан для обучения на интенсивном онлайн‑курсе Базовый HTML и CSS">
-  </head>
-  <body>
-  <header class="main-header">
-  <div class="container">
+</head>
+<body>
+<header class="main-header">
+    <div class="main-header-top">
+        <div class="container">
+            <div class="header-logo">
+                <a href="#">Техномарт</a>
+            </div>
 
-  	<a class="header-logo" href="#">Техномарт</a>
+            <form class="search-form" action="http://technomart.ru" method="get">
+                <button type="submit" name="search-button"></button>
+                <input type="text" name="search" placeholder="Поиск:">
+            </form>
 
-  	<form class="search-form" action="http://technomart.ru" method="get">
-  		<button type="submit" name="search-button"></button>
-  		<input type="text" name="search" placeholder="Поиск:">
-  	</form>
+            <div class="bookmarks">
+                <a href="#">Закладки<span class=bookmarks-counter>0</span></a>
+            </div>
 
-  	<a class="bookmarks" href="#">
-  		Корзина: 10
-  	</a>
-  	<a class="checkout-order" href="#">Оформиь заказ</a>
+            <div class="basket">
+                <a href="#">Корзина: <span class="basket-counter">0</span></a>
+            </div>
 
-  	<div class="about-shop">
-  		<p>Интернет магазин<br>
-  		   строительных материалов<br>
-  		   и инструментов для ремота
-  	</div>
+            <div class="checkout-order">
+                <a href="#">Оформить заказ</a>
+            </div>
+        </div>
+    </div>
 
-  	<div class="contacts-header">
-  		<div class="phone-block">
-  			<p class="phone-number">+7 (812) 555-05-55</p>
-  		</div>
-  		<p class="adress-header">г. Санкт-Петербург, ул. Конюшенная, д.19/8</p>
-  	</div>
+    <div class="container">
+        <div class="about-shop">
+            <p>Интернет магазин<br>
+               строительных материалов<br>
+               и инструментов для ремота
+            </p>
+        </div>
 
-  	<div class="user-block">
-  		<form class="user-block-form" action="http://technomart.ru" method="post">
-  		<label>
-  			Равшан Джамшутович
-  			<input type="image" src="#">
-  		</label>
-  		</form>
-  		<a href="#http://technomart/myorders.ru"></a>
-  		<a href="#http://technomart/user-page.ru"></a>
-  	</div>
+        <div class="contacts-header">
+            <div class="phone-block">
+                <p class="phone-number">+7 (812) 555-05-55</p>
+            </div>
+            <p class="adress-header">г. Санкт-Петербург, ул. Конюшенная, д.19/8</p>
+        </div>
 
-  	<nav>
-  		<ul>
-  			<li>
-  				<a href="#">Главная</a>
-  			</li>
-  			<li>
-  				<a href="#">Компания</a>
-  			</li>
-  			<li>
-  				<a href="#">Каталог</a>
-  			</li>
-  			<li>
-  				<a href="#">Новости</a>
-  			</li>
-  			<li>
-  				<a href="#">Спецпредложения</a>
-  			</li>
-  			<li>
-  				<a href="#">Доставка</a>
-  			</li>
-  			<li>
-  				<a href="#">Контакты</a>
-  			</li>
-  		</ul>
-  	</nav>
+        <div class="user-block">
+            <div class="user-name">
+                <a href="#">
+                    <i class="user-icon"></i>
+                    <p>Равшан Джамшутович</p>
+                    <i class="exit-icon"></i>
+                </a>
+            </div>
+            <a href="#">Мои заказы</a>
+            <a href="#">Личный кабинет</a>
+        </div>
+    </div>
 
-  </div>
-  </header>
+    <nav class="header-nav container">
+        <ul>
+            <li>
+                <a href="#">Главная</a>
+            </li>
+            <li>
+                <a href="#">Компания</a>
+            </li>
+            <li>
+                <a href="#">Каталог</a>
+            </li>
+            <li>
+                <a href="#">Новости</a>
+            </li>
+            <li>
+                <a href="#">Спецпредложения</a>
+            </li>
+            <li>
+                <a href="#">Доставка</a>
+            </li>
+            <li>
+                <a href="#">Контакты</a>
+            </li>
+        </ul>
+    </nav>
+</header>
+
 <main>
 
-	<ul>
+	<ul class="breadcrumbs">
 		<li>
-			<a href="#"><img src="http://technomart/img/home-img.png"></a>
+			<a href="#">
+                <i class="home-icon"></i>
+            </a>
 		</li>
 		<li>
 			<a href="#">Каталог</a>
@@ -92,8 +108,265 @@
 
 	<h1>Перфораторы</h1>
 
-</main>
-    
+    <form class="filter" action="/" method="get">
+        <h2>Фильтры</h2>
 
-  </body>
+        <h3>Цена:</h3>
+
+        <div class="price-range">
+            <div class="scale"></div>
+            <div class="min-slider"></div>
+            <div class="max-slider"></div>  
+        </div>
+
+        <div class="price-counter">
+            <input type="number" name="min-price">
+            <span>-</span>
+            <input type="number" name="max-price"> 
+        </div>
+
+        <section class="producer">
+            <fieldset>
+                <legend>Производители:</legend>
+                <label>
+                    <input type="checkbox" name="bosch">
+                    BOSCH
+                </label>
+                <label>
+                    <input type="checkbox" name="interscol">
+                    ИНТЕРСКОЛ
+                </label>
+                <label>
+                    <input type="checkbox" name="makita">
+                    MAKITA
+                </label>
+                <label>
+                    <input type="checkbox" name="dewalt">
+                    DEWALT
+                </label>
+                <label>
+                    <input type="checkbox" name="hitachi">
+                    HITACHI
+                </label>
+            </fieldset>
+        </section>
+        <section class="power" >
+            <fieldset>
+                <legend>Питание:</legend>
+                <label>
+                    <input type="radio" name="power-type" value="battery">
+                    Аккумуляторные
+                </label>
+                <label>
+                    <input type="radio" name="power-type" value="network">
+                    Сетевые
+                </label>
+            </fieldset>
+            <input type="submit" name="filter-button" value="ПОКАЗАТЬ">            
+        </section>
+    </form>
+    <div class="sort-block">
+        <span>Сортировка</span>
+        <ul>
+            <li>
+                <a href="#">По цене</a>
+            </li>
+            <li>
+                <a href="#">По типу</a>
+            </li>
+            <li>
+                <a href="#">По функционалу</a>
+            </li>
+        </ul>
+        <a class="top-sort" href="#">
+            <i class="top-icon"></i>
+        </a>
+        <a class="down-sort" href="#">
+            <i class="down-icon"></i>
+        </a>
+    </div>
+    <section class="gallary">
+
+        <article class="gallary-item">
+            <div class="image-box">
+                <img src="#" alt="" width="220" height="180">
+            </div>
+            <h2>Перфоратор BOSCH BFG 3000</h2>
+            <p class="old-price">22500 Р.</p>
+            <p class="actual-price">15500 Р.</p>
+        </article>
+
+        <article class="gallary-item">
+            <div class="image-box">
+                <img src="#" alt="" width="220" height="180">
+            </div>
+            <h2>Перфоратор BOSCH BFG 6000</h2>
+            <p class="old-price">30500 Р.</p>
+            <p class="actual-price">25500 Р.</p>
+        </article>
+
+
+        <article class="gallary-item active">
+            <div class="image-box">
+                <img class="ad-label" src="#" alt="Новинка" width="60" height="60" >
+                <a href="buy-button">
+                    <i class=basket-icon></i>
+                    Купить
+                </a>
+            </div>
+            <a href="add-bookmarks">В закладки</a>
+            <h2>Перфоратор BOSCH BFG 2000</h2>
+            <!-- <p class="old-price">22500 Р.</p> -->
+            <p class="actual-price">12500 Р.</p>
+        </article>
+
+        <article class="gallary-item">
+            <div class="image-box">
+                <img src="#" alt="" width="220" height="180">
+            </div>
+            <h2>Перфоратор BOSCH BFG 3000</h2>
+            <p class="old-price">22500 Р.</p>
+            <p class="actual-price">15500 Р.</p>
+        </article>
+
+        <article class="gallary-item">
+            <div class="image-box">
+                <img src="#" alt="" width="220" height="180">
+                <img src="#" class="ad-label" alt="Новинка" width="60" height="60" >
+            </div>
+            <h2>Перфоратор BOSCH BFG 6000</h2>
+            <p class="old-price">30500 Р.</p>
+            <p class="actual-price">22500 Р.</p>
+        </article>
+
+        <article class="gallary-item">
+            <img src="#" alt="" width="220" height="180">
+            <h2>Перфоратор BOSCH BFG 2000</h2>
+            <p class="actual-price">12500 Р.</p>
+        </article>
+
+        <article class="gallary-item">
+            <div class="image-box">
+                <img src="#" alt="" width="220" height="180">
+                <img src="#" class="ad-label" alt="Новинка" width="60" height="60" >
+            </div>
+            <h2>Перфоратор BOSCH BFG 3000</h2>
+            <p class="old-price">22500 Р.</p>
+            <p class="actual-price">15500 Р.</p>
+        </article>
+
+        <article class="gallary-item">
+            <div class="image-box">
+                <img src="#" alt="" width="220" height="180">
+            </div>
+            <h2>Перфоратор BOSCH BFG 6000</h2>
+            <p class="old-price">30500 Р.</p>
+            <p class="actual-price">25500 Р.</p>
+        </article>
+
+        <article class="gallary-item">
+            <img src="#" alt="" width="220" height="180">
+            <h2>Перфоратор BOSCH BFG 2000</h2>
+            <p class="actual-price">12500 Р.</p>
+        </article>
+
+        <div class="page-nav">
+        <ul>
+            <li>
+                <a class="page-number active-page" href="http://tecnomart/page1.ru">1</a>
+            </li>
+            <li>
+                <a class="page-number" href="http://tecnomart/page2.ru">2</a>
+            </li>
+            <li>
+                <a class="page-number" href="http://tecnomart/page3.ru">3</a>
+            </li>
+            <li>
+                <a class="page-number" href="http://tecnomart/page4.ru">Следующая</a>
+            </li>
+        </ul>
+        </div>
+    </section>
+    <section class="catagory-description">
+        <h2>Пара слов о перфораторах</h2>
+        <p>Перфоратор универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне. Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка. В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.</p>
+    </section>
+</main>
+
+<footer class="main-footer">
+    <div class="container">
+        <div class="footer-logo">
+            <a href="#">Техномарт</a>
+            <p>
+                г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
+                +7 812 555-05-55
+            </p>
+        </div>
+        <nav class="footer-menu">
+            <ul class="footer-first-line">
+                <li>
+                <a href="#">Компания</a>
+                </li>
+                <li>
+                <a href="#">Новости</a>
+                </li>
+                <li>
+                <a href="#">Каталог</a>
+                </li>
+                <li>
+                <a href="#">Доставка</a>
+                </li>
+                <li>
+                <a href="#">Контакты</a>
+                </li>
+            </ul>
+
+            <ul class="footer-second-line">
+                <li>
+                <a href="#">Материалы</a>
+                </li>
+                <li>
+                <a href="#">Техника</a>
+                </li>
+                <li>
+                <a href="#">Интсрумент</a>
+                </li>
+                <li>
+                <a href="#">Спецпредложения</a>
+                </li>
+            </ul>
+        </nav>
+    </div>
+
+    <div class="copyright-block">
+        <div class="container">
+
+            <div class="footer-copyright">
+                <p>
+                    © 2010-2016 Компания «Техномарт»<br>
+                    Все права защищены
+                </p>
+            </div>
+
+            <div class="social-footer">
+                <a class="social-btn btn-vk" href="#">Вконтакте</a>
+                <a class="social-btn btn-fb" href="#">Фейсбук</a>
+                <a class="social-btn btn-inst" href="#">Инстаграм</a>               
+            </div>
+
+            <div class="back-link">
+                <p>
+                    Обратная связь:<br>
+                    <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+                </p>
+            </div>
+
+            <div class="footer-developer">
+                <p>Разработано - </p>
+                <a href="https://htmlacademy.ru">htmlacademy.ru</a>
+            </div>
+        </div>
+    </div>  
+</footer>
+</body>
 </html>
