--- a/catalog.html
+++ b/catalog.html
@@ -187,9 +187,16 @@
     </div>
     <section class="gallary">
 
+    <!-- При наведении изображение товара будет исчезать, а ссылки "купить"" и "в закладки"" появляться при помощи CSS. Думаю в разметке все эти элементы должны быть в каждой карточке товара. А вот значок "NEW" и "старая цена" будет добавляться только в необходимых местах. -->
+
         <article class="gallary-item">
             <div class="image-box">
-                <img src="#" alt="" width="220" height="180">
+                <img class="item-image" src="#" alt="" width="220" height="180">
+                <a href="buy-button">
+                    <i class=basket-icon></i>
+                    Купить
+                </a>
+                <a href="add-bookmarks">В закладки</a>
             </div>
             <h2>Перфоратор BOSCH BFG 3000</h2>
             <p class="old-price">22500 Р.</p>
@@ -198,7 +205,12 @@
 
         <article class="gallary-item">
             <div class="image-box">
-                <img src="#" alt="" width="220" height="180">
+                <img class="item-image" src="#" alt="" width="220" height="180">
+                <a href="buy-button">
+                    <i class=basket-icon></i>
+                    Купить
+                </a>
+                <a href="add-bookmarks">В закладки</a>
             </div>
             <h2>Перфоратор BOSCH BFG 6000</h2>
             <p class="old-price">30500 Р.</p>
@@ -208,13 +220,14 @@
 
         <article class="gallary-item active">
             <div class="image-box">
+                <img class="item-image" src="#" alt="" width="220" height="180">
                 <img class="ad-label" src="#" alt="Новинка" width="60" height="60" >
                 <a href="buy-button">
                     <i class=basket-icon></i>
                     Купить
                 </a>
+                <a href="add-bookmarks">В закладки</a>
             </div>
-            <a href="add-bookmarks">В закладки</a>
             <h2>Перфоратор BOSCH BFG 2000</h2>
             <!-- <p class="old-price">22500 Р.</p> -->
             <p class="actual-price">12500 Р.</p>
@@ -222,7 +235,12 @@
 
         <article class="gallary-item">
             <div class="image-box">
-                <img src="#" alt="" width="220" height="180">
+                <img class="item-image" src="#" alt="" width="220" height="180">
+                <a href="buy-button">
+                    <i class=basket-icon></i>
+                    Купить
+                </a>
+                <a href="add-bookmarks">В закладки</a>
             </div>
             <h2>Перфоратор BOSCH BFG 3000</h2>
             <p class="old-price">22500 Р.</p>
@@ -231,8 +249,13 @@
 
         <article class="gallary-item">
             <div class="image-box">
-                <img src="#" alt="" width="220" height="180">
-                <img src="#" class="ad-label" alt="Новинка" width="60" height="60" >
+                <img class="item-image" src="#" alt="" width="220" height="180">
+                <img class="ad-label" src="#" alt="Новинка" width="60" height="60" >
+                <a href="buy-button">
+                    <i class=basket-icon></i>
+                    Купить
+                </a>
+                <a href="add-bookmarks">В закладки</a>
             </div>
             <h2>Перфоратор BOSCH BFG 6000</h2>
             <p class="old-price">30500 Р.</p>
@@ -240,15 +263,27 @@
         </article>
 
         <article class="gallary-item">
-            <img src="#" alt="" width="220" height="180">
+            <div class="image-box">
+                <img class="item-image" src="#" alt="" width="220" height="180">
+                <a href="buy-button">
+                    <i class=basket-icon></i>
+                    Купить
+                </a>
+                <a href="add-bookmarks">В закладки</a>
+            </div>
             <h2>Перфоратор BOSCH BFG 2000</h2>
             <p class="actual-price">12500 Р.</p>
         </article>
 
         <article class="gallary-item">
             <div class="image-box">
-                <img src="#" alt="" width="220" height="180">
-                <img src="#" class="ad-label" alt="Новинка" width="60" height="60" >
+                <img class="item-image" src="#" alt="" width="220" height="180">
+                <img class="ad-label" src="#" alt="Новинка" width="60" height="60" >
+                <a href="buy-button">
+                    <i class=basket-icon></i>
+                    Купить
+                </a>
+                <a href="add-bookmarks">В закладки</a>
             </div>
             <h2>Перфоратор BOSCH BFG 3000</h2>
             <p class="old-price">22500 Р.</p>
@@ -257,7 +292,12 @@
 
         <article class="gallary-item">
             <div class="image-box">
-                <img src="#" alt="" width="220" height="180">
+                <img class="item-image" src="#" alt="" width="220" height="180">
+                <a href="buy-button">
+                    <i class=basket-icon></i>
+                    Купить
+                </a>
+                <a href="add-bookmarks">В закладки</a>
             </div>
             <h2>Перфоратор BOSCH BFG 6000</h2>
             <p class="old-price">30500 Р.</p>
@@ -265,7 +305,14 @@
         </article>
 
         <article class="gallary-item">
-            <img src="#" alt="" width="220" height="180">
+            <div class="image-box">
+                <img class="item-image" src="#" alt="" width="220" height="180">
+                <a href="buy-button">
+                    <i class=basket-icon></i>
+                    Купить
+                </a>
+                <a href="add-bookmarks">В закладки</a>
+            </div>
             <h2>Перфоратор BOSCH BFG 2000</h2>
             <p class="actual-price">12500 Р.</p>
         </article>
