Создан файл стилей и подключены изображения.

--- a/catalog.html
+++ b/catalog.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>HTML Academy: Техномарт</title>
         <meta name="description" content="Репозиторий создан для обучения на интенсивном онлайн‑курсе Базовый HTML и CSS">
+        <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
         <header class="main-header">
@@ -16,15 +17,12 @@
                         <button type="submit" name="search-button"></button>
                         <input type="text" name="search" placeholder="Поиск:">
                     </form>
-
                     <div class="bookmarks">
                         <a href="#">Закладки<span class=bookmarks-counter>0</span></a>
                     </div>
-
                     <div class="basket">
                         <a href="#">Корзина: <span class="basket-counter">0</span></a>
                     </div>
-
                     <div class="checkout-order">
                         <a href="#">Оформить заказ</a>
                     </div>
@@ -34,7 +32,6 @@
                 <div class="about-shop">
                     <p>Интернет магазин<br>строительных материалов<br>и инструментов для ремота</p>
                 </div>
-
                 <div class="contacts-header">
                     <div class="phone-block">
                         <p class="phone-number">+7 (812) 555-05-55</p>
@@ -80,34 +77,31 @@
             </nav>
         </header>
         <main>
-        	<ul class="breadcrumbs">
-        		<li>
-        			<a href="#">
+            <ul class="breadcrumbs">
+                <li>
+                    <a href="#">
                         <i class="home-icon"></i>
                     </a>
-        		</li>
-        		<li>
-        			<a href="#">Каталог</a>
-        		</li>
-        		<li>
-        			<a href="#">Инструмент</a>
-        		</li>
-        		<li>
-        			<a href="#">Перфораторы</a>
-        		</li>
-        	</ul>
-        	<h1>Перфораторы</h1>
+                </li>
+                <li>
+                    <a href="#">Каталог</a>
+                </li>
+                <li>
+                    <a href="#">Инструмент</a>
+                </li>
+                <li>
+                    <a href="#">Перфораторы</a>
+                </li>
+            </ul>
+            <h1>Перфораторы</h1>
             <form class="filter" action="/" method="get">
-                <h2>Фильтры</h2>
-
+                <h2>Фильтр:</h2>
                 <h3>Цена:</h3>
-
                 <div class="price-range">
                     <div class="scale"></div>
                     <div class="min-slider"></div>
                     <div class="max-slider"></div>  
                 </div>
-
                 <div class="price-counter">
                     <input type="number" name="min-price">
                     <span>-</span>
@@ -176,7 +170,7 @@
             <section class="gallary">
             <article class="gallary-item">
                     <div class="image-box">
-                        <img class="item-image" src="#" alt="" width="220" height="180">
+                        <img class="item-image" src="img/bfg-3000.jpg" width="218" height="159" alt="">
                         <a href="buy-button">
                             <i class=basket-icon></i>
                             Купить
@@ -189,7 +183,7 @@
                 </article>
                 <article class="gallary-item">
                     <div class="image-box">
-                        <img class="item-image" src="#" alt="" width="220" height="180">
+                        <img class="item-image" src="img/bfg-6000.jpg" width="218" height="159" alt="">
                         <a href="buy-button">
                             <i class=basket-icon></i>
                             Купить
@@ -202,8 +196,8 @@
                 </article>
                 <article class="gallary-item active">
                     <div class="image-box">
-                        <img class="item-image" src="#" alt="" width="220" height="180">
-                        <img class="ad-label" src="#" alt="Новинка" width="60" height="60" >
+                        <img class="item-image" src="img/bfg-2000.jpg" width="218" height="159" alt="">
+                        <img class="label-new" src="img/label-new.png" width="60" height="59" alt="Новинка">
                         <a href="buy-button">
                             <i class=basket-icon></i>
                             Купить
@@ -215,7 +209,7 @@
                 </article>
                 <article class="gallary-item">
                     <div class="image-box">
-                        <img class="item-image" src="#" alt="" width="220" height="180">
+                        <img class="item-image" src="img/bfg-3000.jpg" width="218" height="159" alt="">
                         <a href="buy-button">
                             <i class=basket-icon></i>
                             Купить
@@ -228,8 +222,8 @@
                 </article>
                 <article class="gallary-item">
                     <div class="image-box">
-                        <img class="item-image" src="#" alt="" width="220" height="180">
-                        <img class="ad-label" src="#" alt="Новинка" width="60" height="60" >
+                        <img class="item-image" src="img/bfg-6000.jpg" width="218" height="159" alt="">
+                        <img class="label-new" src="img/label-new.png" width="60" height="59" alt="Новинка">
                         <a href="buy-button">
                             <i class=basket-icon></i>
                             Купить
@@ -242,7 +236,7 @@
                 </article>
                 <article class="gallary-item">
                     <div class="image-box">
-                        <img class="item-image" src="#" alt="" width="220" height="180">
+                        <img class="item-image" src="img/bfg-2000.jpg" width="218" height="159" alt="">
                         <a href="buy-button">
                             <i class=basket-icon></i>
                             Купить
@@ -254,8 +248,8 @@
                 </article>
                 <article class="gallary-item">
                     <div class="image-box">
-                        <img class="item-image" src="#" alt="" width="220" height="180">
-                        <img class="ad-label" src="#" alt="Новинка" width="60" height="60" >
+                        <img class="item-image" src="img/bfg-3000.jpg" width="218" height="159" alt="">
+                        <img class="label-new" src="img/label-new.png" width="60" height="59" alt="Новинка">
                         <a href="buy-button">
                             <i class=basket-icon></i>
                             Купить
@@ -268,7 +262,7 @@
                 </article>
                 <article class="gallary-item">
                     <div class="image-box">
-                        <img class="item-image" src="#" alt="" width="220" height="180">
+                        <img class="item-image" src="img/bfg-6000.jpg" width="218" height="159" alt="">
                         <a href="buy-button">
                             <i class=basket-icon></i>
                             Купить
@@ -281,7 +275,7 @@
                 </article>
                 <article class="gallary-item">
                     <div class="image-box">
-                        <img class="item-image" src="#" alt="" width="220" height="180">
+                        <img class="item-image" src="img/bfg-2000.jpg" width="218" height="159" alt="">
                         <a href="buy-button">
                             <i class=basket-icon></i>
                             Купить
