Сделал сетку и оформление css Header

--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
     <body>
         <header class="main-header">
             <div class="main-header-top">
-                <div class="container">
+                <div class="container clearfix">
                     <div class="header-logo">
                         <a href="#">Техномарт</a>
                     </div>
                     <form class="search-form" action="http://technomart.ru" method="get">
-                        <button type="submit" name="search-button"></button>
+                        <button type="submit" name="search-button"><i></i></button>
                         <input type="text" name="search" placeholder="Поиск:">
                     </form>
                     <div class="bookmarks">
-                        <a href="#">Закладки<span class=bookmarks-counter>0</span></a>
+                        <a href="#">Закладки: <span class=bookmarks-counter>0</span></a>
                     </div>
                     <div class="basket">
                         <a href="#">Корзина: <span class="basket-counter">0</span></a>
@@ -29,19 +29,17 @@
                 </div>
             </div>
 
-            <div class="container">
+            <div class="container clearfix">
                 <div class="about-shop">
                     <p>Интернет магазин<br>строительных материалов<br>и инструментов для ремота</p>
                 </div>
                 <div class="contacts-header">
-                    <div class="phone-block">
-                        <p class="phone-number">+7 (812) 555-05-55</p>
-                    </div>
+                    <p class="phone-number">+7 (812) 555-05-55</p>
                     <p class="adress-header">г. Санкт-Петербург, ул. Конюшенная, д.19/8</p>
                 </div>
                 <div class="user-block">
-                    <a class="login" href="#http://technomart/myorders.ru"></a>
-                    <a class="check-in" href="#http://technomart/user-page.ru"></a>
+                    <a class="login" href="#http://technomart/myorders.ru">Войти</a>
+                    <a class="check-in" href="#http://technomart/user-page.ru">Регистрация</a>
                 </div>
             </div>
             <nav class="header-nav container">
