--- a/catalog.html
+++ b/catalog.html
@@ -4,6 +4,8 @@
         <meta charset="utf-8">
         <title>HTML Academy: Техномарт</title>
         <meta name="description" content="Репозиторий создан для обучения на интенсивном онлайн‑курсе Базовый HTML и CSS">
+        <link href="https://fonts.googleapis.com/css?family=Cuprum:400,700|PT+Sans:400,700&subset=cyrillic" rel="stylesheet">
+        <link href="css/normalize.css" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
