--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 				<div class="container clearfix">
 					<div class="logo">Техномарт</div>
 					<form tabindex="0" class="search-form" action="#" method="get">
-						<i class="icon-search"></i>
-						<input type="text" name="search" placeholder="Поиск:">
+						<input type="text" name="search" id="search-id" placeholder="Поиск:">
+						<label class="icon-search" for="search-id"></label>
 					</form>
 					<a class="bookmark" href="#">
 						<i class="icon-bookmark"></i>Закладки: <span class=bookmark-counter>0</span>
@@ -38,32 +38,32 @@
 					<a class="login" href="#http://technomart/myorders.ru"><i class=icon-login></i><span>Войти</span></a>
 					<a class="check-in" href="#http://technomart/user-page.ru"><span>Регистрация</span></a>
 				</div>
+				<nav class="header-nav">
+					<ul>
+						<li>
+							<a href="#">Главная</a>
+						</li>
+						<li>
+							<a href="#">Компания</a>
+						</li>
+						<li>
+							<a href="#">Каталог</a>
+						</li>
+						<li>
+							<a href="#">Новости</a>
+						</li>
+						<li>
+							<a href="#">Спецпредложения</a>
+						</li>
+						<li>
+							<a href="#">Доставка</a>
+						</li>
+						<li>
+							<a href="#">Контакты</a>
+						</li>
+					</ul>
+				</nav>
 			</div>
-			<nav class="header-nav container">
-				<ul>
-					<li>
-						<a href="#">Главная</a>
-					</li>
-					<li>
-						<a href="#">Компания</a>
-					</li>
-					<li>
-						<a href="#">Каталог</a>
-					</li>
-					<li>
-						<a href="#">Новости</a>
-					</li>
-					<li>
-						<a href="#">Спецпредложения</a>
-					</li>
-					<li>
-						<a href="#">Доставка</a>
-					</li>
-					<li>
-						<a href="#">Контакты</a>
-					</li>
-				</ul>
-			</nav>
 		</header>
 		<main>
 			<div class="container">
