Сверстаны модальные окна
Вопрос: кнопка выхода из модального окна это ссылка или button?

--- a/catalog.html
+++ b/catalog.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>HTML Academy: Техномарт</title>
         <meta name="description" content="Репозиторий создан для обучения на интенсивном онлайн‑курсе Базовый HTML и CSS">
-        <link href="https://fonts.googleapis.com/css?family=Cuprum:400,700|PT+Sans:400,700&subset=cyrillic" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700|PT+Sans:400,700&subset=cyrillic" rel="stylesheet">
         <link href="css/normalize.css" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet">
     </head>
@@ -266,16 +266,16 @@
                     <div class="page-nav">
                     <ul>
                         <li>
-                            <a class="page-number active-page" href="http://tecnomart/page1.ru">1</a>
+                            <a class="page-number active-page" href="#">1</a>
                         </li>
                         <li>
-                            <a class="page-number" href="http://tecnomart/page2.ru">2</a>
+                            <a class="page-number" href="#">2</a>
                         </li>
                         <li>
-                            <a class="page-number" href="http://tecnomart/page3.ru">3</a>
+                            <a class="page-number" href="#">3</a>
                         </li>
                         <li>
-                            <a class="page-number" href="http://tecnomart/page4.ru">Следующая</a>
+                            <a class="page-number" href="#">Следующая</a>
                         </li>
                     </ul>
                     </div>
@@ -351,5 +351,16 @@
                 </div>
             </div>
         </footer>
+        <div class="modal-add-basket">
+            <div class="modal-container">
+                <div class="message"><span class="ok"></span>Товар добавлен в корзину</div>
+            </div>
+            <div class="modal-actions clearfix">
+                <div class="modal-container">
+                    <a class="checkout" href="#">Оформить заказ</a>
+                    <a class="continue" href="#">Продолжить покупки</a>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
