--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
 							<a class="footer-link" href="#">mail@htmlacademy.ru</a></p>
 					</div>
 					<div class="footer-developer">
-						<p>Разработано - </p>
+						<p>Разработано	— </p>
 						<a class="footer-link" href="#">htmlacademy.ru</a>
 					</div>
 				</div>
