--- a/catalog.html
+++ b/catalog.html
@@ -24,7 +24,7 @@
             </div>
             <div class="container clearfix">
                 <div class="about-shop">
-                    <p>Интернет магазин<br>строительных материалов<br>и инструментов для ремота</p>
+                    <p>Интернет-магазин<br>строительных материалов<br>и инструментов для ремонта</p>
                 </div>
                 <div class="contacts-header">
                     <p class="phone-number">+7 (812) 555-05-55</p>
