--- a/catalog.html
+++ b/catalog.html
@@ -289,6 +289,7 @@
                     <div class="container">
                         <h2>Пара слов о перфораторах</h2>
                         <p>Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне. Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка. В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.</p>
+                    </div>
                 </section>
             </div>
         </main>
@@ -346,7 +347,7 @@
                     </div>
                     <div class="back-link">
                         <p>Обратная связь:<br>
-                            <a class="footer-link" href="#<!-- mailto:mail@htmlacademy.ru -->">mail@htmlacademy.ru</a></p>
+                            <a class="footer-link" href="#">mail@htmlacademy.ru</a></p>
                     </div>
                     <div class="footer-developer">
                         <p>Разработано - </p>
